Create swagger for registering
