# api/openapi/restapi/op/web_authn/webauthn_reg_final_responses.go
@@ -1,0 +1,57 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package web_authn
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// WebauthnRegFinalOKCode is the HTTP code returned for type WebauthnRegFinalOK
+const WebauthnRegFinalOKCode int = 200
+
+/*
+WebauthnRegFinalOK Successful registration
+
+swagger:response webauthnRegFinalOK
+*/
+type WebauthnRegFinalOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *WebauthnRegFinalOKBody `json:"body,omitempty"`
+}
+
+// NewWebauthnRegFinalOK creates WebauthnRegFinalOK with default headers values
+func NewWebauthnRegFinalOK() *WebauthnRegFinalOK {
+
+	return &WebauthnRegFinalOK{}
+}
+
+// WithPayload adds the payload to the webauthn reg final o k response
+func (o *WebauthnRegFinalOK) WithPayload(payload *WebauthnRegFinalOKBody) *WebauthnRegFinalOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the webauthn reg final o k response
+func (o *WebauthnRegFinalOK) SetPayload(payload *WebauthnRegFinalOKBody) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *WebauthnRegFinalOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
