# api/openapi/restapi/op/web_authn/webauthn_reg_init_responses.go
@@ -1,0 +1,59 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package web_authn
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/hellohq/hqservice/api/openapi/model"
+)
+
+// WebauthnRegInitOKCode is the HTTP code returned for type WebauthnRegInitOK
+const WebauthnRegInitOKCode int = 200
+
+/*
+WebauthnRegInitOK Challenge
+
+swagger:response webauthnRegInitOK
+*/
+type WebauthnRegInitOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *model.CredentialCreationOptions `json:"body,omitempty"`
+}
+
+// NewWebauthnRegInitOK creates WebauthnRegInitOK with default headers values
+func NewWebauthnRegInitOK() *WebauthnRegInitOK {
+
+	return &WebauthnRegInitOK{}
+}
+
+// WithPayload adds the payload to the webauthn reg init o k response
+func (o *WebauthnRegInitOK) WithPayload(payload *model.CredentialCreationOptions) *WebauthnRegInitOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the webauthn reg init o k response
+func (o *WebauthnRegInitOK) SetPayload(payload *model.CredentialCreationOptions) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *WebauthnRegInitOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
